--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aleutian-client"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
     { name="John", email="support@aleutian.ai" },
 ]
@@ -30,3 +30,9 @@ dependencies = [
 [project.urls]
 "Homepage" = "https://github.com/jinterlante1206/aleutian-client-python"
 "Bug Tracker" = "https://github.com/jinterlante1206/aleutian-client-python/issues"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["aleutian_client*"]
+exclude = []
+namespaces = false
